--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Display-Flex</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Display Flex</h1>
+    </header>
+    <main>
+        <section class="camaro">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, recusandae modi? Nisi, nostrum? Alias
+                distinctio voluptatibus, exercitationem asperiores debitis deserunt iure voluptas. Inventore repudiandae
+                velit maiores, amet fuga error reprehenderit!</p>
+                
+            <img src="http://galpaoz28.com.br/rides/blackhawk/big.jpg" alt="Foto não encontrada">
+        </section>
+        <section class="zeus">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus voluptatem quo necessitatibus tempore nostrum commodi aliquam vero deleniti nobis repellat possimus neque maiores nulla quisquam nihil, ad perspiciatis aperiam maxime.</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5P0nEHEqmK0bpjVkzy3oYGy3jH1KTt87uWsDylPpU6koYMcQBoF4zttibpVTeY4HXxlk&usqp=CAU" alt="The Zeus">
+        </section>
+        <section class="form">
+            <form action="">
+                <div>
+                    <label for="">Usuário</label>
+                    <input type="text" id="user">
+                </div>
+                <div>
+                    <label for="senha">Senha</label>
+                    <input type="password" id="senha">
+                </div>
+                <button>Enviar</button>
+            </form>
+        </section>
+    </main>
 </body>
+
 </html>
